--- a/packages/tools/docusaurus/src/css/_headline.scss
+++ b/packages/tools/docusaurus/src/css/_headline.scss
@@ -1,10 +1,15 @@
 header.c-headline {
+  --c-headline--color: var(--ifm-heading-color);
+
   &--align-center {
     margin: auto;
   }
 
   .c-headline__subheadline {
     --c-headline_subheadline--font-weight: var(--ifm-font-weight-semibold);
+    [data-theme='dark'] & {
+      --c-headline_subheadline--color: var(--ks-color-primary-inverted-to-bg-7);
+    }
   }
 }
 
