--- a/packages/tools/docusaurus/src/css/_headline.scss
+++ b/packages/tools/docusaurus/src/css/_headline.scss
@@ -7,7 +7,8 @@ header.c-headline {
 
   .c-headline__subheadline {
     --c-headline_subheadline--font-weight: var(--ifm-font-weight-semibold);
-    [data-theme='dark'] & {
+    [data-theme='dark'] &,
+    [ks-inverted='true'] & {
       --c-headline_subheadline--color: var(--ks-color-primary-inverted-to-bg-7);
     }
   }
