--- a/packages/tools/docusaurus/src/css/mapping.css
+++ b/packages/tools/docusaurus/src/css/mapping.css
@@ -357,7 +357,8 @@
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'],
 [data-theme='dark'] [ks-theme],
-[data-theme='dark'] [ks-inverted] {
+[data-theme='dark'] [ks-inverted],
+[ks-inverted='true'] {
   --ifm-background-color: var(--ks-background-color-default) !important;
   --ifm-background-surface-color: #0b4857 !important;
 
