--- a/packages/tools/docusaurus/src/css/_color-preview.scss
+++ b/packages/tools/docusaurus/src/css/_color-preview.scss
@@ -23,11 +23,13 @@
   }
 
   &-info {
-    background-color: var(--ks-color-info);
+    background-color: #05566a;
+    // background-color: var(--ks-color-info);
   }
 
   &-info-inverted {
-    background-color: var(--ks-color-info-inverted);
+    background-color: #ecff00;
+    // background-color: var(--ks-color-info-inverted);
   }
 
   &-primary {
