--- a/packages/components/base/source/notification/notification.scss
+++ b/packages/components/base/source/notification/notification.scss
@@ -2,9 +2,16 @@
 @use 'bourbon/core/bourbon';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './notification-vars';
+@use './container';
 
 $vars: meta.module-variables(notification-vars);
-@include custom-properties.styles($vars);
+@include custom-properties.styles($vars, container.$name);
+@include container.wrapper;
+
+@include container.wrapper('notification') {
+  display: flex;
+  flex-direction: column;
+}
 
 .c-notification {
   font: var(--c-notification--font);
@@ -13,9 +20,7 @@ $vars: meta.module-variables(notification-vars);
 
   display: flex;
   flex-direction: row;
-  gap: var(--ks-spacing-s);
-
-  max-width: 400px;
+  gap: var(--c-notification--gap);
 
   text-decoration: none;
   background-color: var(--c-notification--background-color);
@@ -37,6 +42,7 @@ $vars: meta.module-variables(notification-vars);
     gap: var(--ks-spacing-xs);
     align-items: center;
     height: fit-content;
+    margin-left: auto;
   }
 
   * {
@@ -55,8 +61,11 @@ $vars: meta.module-variables(notification-vars);
   }
 
   &__icon {
-    min-width: var(--c-notification--icon-size);
-    min-height: var(--c-notification--icon-size);
+    color: var(--c-notification--icon-color);
+    max-width: var(--c-notification--icon-size);
+    max-height: var(--c-notification--icon-size);
+    width: auto;
+    height: auto;
   }
 
   &__remove-btn {
@@ -68,6 +77,7 @@ $vars: meta.module-variables(notification-vars);
     opacity: 0.75;
 
     .icon {
+      color: var(--ks-text-color-interface);
       transform: scale(0.85);
     }
 
