fix: fix text-media intext media alignment
resolves #1273

--- a/packages/components/base/source/text-media/text-media.scss
+++ b/packages/components/base/source/text-media/text-media.scss
@@ -93,4 +93,8 @@
     text-align: left;
     color: var(--ks-text-color-default);
   }
+
+  .l-container--rich-text {
+    display: contents;
+  }
 }
