fix(core): move rich text styles to global scope

--- a/packages/components/base/source/global/base.scss
+++ b/packages/components/base/source/global/base.scss
@@ -8,3 +8,4 @@
 @use '../generic/topic/topic' as *;
 @use '../generic/lazyload/lazyload' as *;
 @use '../utilities/hide' as *;
+@use './rich-text' as *;
