fix(bundler): yarn build runs through, again

--- a/packages/components/core/source/core/_container.scss
+++ b/packages/components/core/source/core/_container.scss
@@ -9,7 +9,7 @@ $unit-intervals: (
   'px': 1,
   // 'em': 0.01,
   // 'rem': 0.1,
-  // '': 0,,,,,,,,
+  // '': 0,,,,,,,,,
 ) !default;
 
 @mixin wrapper($localName: $name) {
