--- a/packages/components/base/source/section/section.scss
+++ b/packages/components/base/source/section/section.scss
@@ -31,9 +31,23 @@ $vars: meta.module-variables(section-vars);
     padding-bottom: 0;
   }
 
+  &__content {
+    margin: auto;
+    padding: 0 var(--l-section--content-padding);
+    max-width: var(--l-section--content-width-default);
+
+    &--max {
+      max-width: var(--l-section--content-width-max);
+    }
+
+    &--full {
+      max-width: var(--l-section--content-width-full);
+      padding: 0;
+    }
+  }
+
   &__container {
     margin: auto;
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(
       var(--l-section_col--repeat),
@@ -44,34 +58,8 @@ $vars: meta.module-variables(section-vars);
     );
     grid-gap: var(--l-section--gutter);
 
-    &--wrap {
-      display: block;
-      padding: 0 var(--l-section--content-padding);
-      max-width: var(--l-section--content-width-default);
-
-      &.l-section__container--full {
-        padding: 0;
-      }
-    }
-
-    &--narrow {
-      max-width: var(--l-section--content-width-narrow);
-    }
-
     &--default {
       max-width: var(--l-section--content-width-default);
-    }
-
-    &--wide {
-      max-width: var(--l-section--content-width-wide);
-    }
-
-    &--max {
-      max-width: var(--l-section--content-width-max);
-    }
-
-    &--full {
-      max-width: var(--l-section--content-width-full);
     }
 
     &--left {
@@ -80,6 +68,18 @@ $vars: meta.module-variables(section-vars);
 
     &--right {
       margin-right: 0;
+    }
+  }
+
+  &__content,
+  &__container {
+    width: 100%;
+
+    &--narrow {
+      max-width: var(--l-section--content-width-narrow);
+    }
+    &--wide {
+      max-width: var(--l-section--content-width-wide);
     }
   }
 }
