--- a/packages/components/base/source/section/section.scss
+++ b/packages/components/base/source/section/section.scss
@@ -31,6 +31,22 @@ $vars: meta.module-variables(section-vars);
     padding-bottom: 0;
   }
 
+  &__content {
+    margin: auto;
+    padding: 0 var(--l-section--content-padding);
+    max-width: var(--l-section--content-width-default);
+    box-sizing: content-box;
+
+    &--max {
+      max-width: var(--l-section--content-width-max);
+    }
+
+    &--full {
+      max-width: var(--l-section--content-width-full);
+      padding: 0;
+    }
+  }
+
   &__container {
     margin: auto;
     display: grid;
@@ -42,7 +58,7 @@ $vars: meta.module-variables(section-vars);
       )
     );
     grid-gap: var(--l-section--gutter);
-    padding: 0 var(--l-section--content-padding);
+    box-sizing: border-box;
 
     &--default {
       max-width: var(--l-section--content-width-default);
@@ -59,30 +75,11 @@ $vars: meta.module-variables(section-vars);
 
   &__content,
   &__container {
-    width: 100%;
-
     &--narrow {
       max-width: var(--l-section--content-width-narrow);
     }
     &--wide {
       max-width: var(--l-section--content-width-wide);
-    }
-  }
-
-  &__content {
-    margin: auto;
-    max-width: var(--l-section--content-width-default);
-
-    &--max {
-      max-width: var(--l-section--content-width-max);
-    }
-
-    &--full {
-      max-width: var(--l-section--content-width-full);
-
-      .l-section__container {
-        padding: 0;
-      }
     }
   }
 }
