--- a/packages/components/form/source/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/form-field/_form-field-vars.scss
@@ -5,7 +5,7 @@ $host: (
     border: var(--ks-border-width-default) solid,
     border-color: var(--ks-border-color-interface-interactive),
     border-radius: var(--ks-border-radius-control),
-    background: var(--ks-background-color-interface-interactive),
+    background: transparent,
     background-disabled:
       var(--ks-background-color-interface-interactive-disabled),
     color: var(--ks-text-color-interface-interactive),
