--- a/packages/components/base/source/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/teaser/_teaser-vars.scss
@@ -1,22 +1,16 @@
 $name-: 'c-teaser' !default;
 
 $host: (
-  ':root, [ks-theme], [ks-inverted]': (
-    font: var(--ks-font-copy-m),
-    color: var(--ks-text-color-default),
+  '.c-teaser': (
     background: var(--ks-color-fg-alpha-8),
     border: var(--ks-border-width-default) solid
       var(--ks-border-color-interface),
-    border-radius: null,
+    border-radius: var(--ks-border-radius-card),
     shadow: null,
-    shadow-hover: (
-      0 0 30px rgba(0, 0, 0, 0.1),
-      0 10px 20px -15px rgba(0, 0, 0, 0.023),
-      0 25px 25px -35px rgba(0, 0, 0, 0.057),
-    ),
+    shadow-hover: var(--ks-box-shadow-card-hover),
     padding: 1rem,
   ),
-  '[ks-inverted=true]': (
+  '[ks-inverted=true] .c-teaser, [ks-inverted=true].c-teaser': (
     border: null,
     shadow: null,
     shadow-hover: (
@@ -27,8 +21,29 @@ $host: (
   ),
 ) !default;
 
-$text: (
-  ':root, [ks-theme], [ks-inverted]': (
+$background: (
+  '.c-teaser': (
+    background: var(--ks-background-color-card-interactive),
+    border-width: var(--ks-border-width-default),
+    border-color: var(--ks-border-color-card-interactive),
+    border-color_hover: var(--ks-border-color-card-interactive-hover),
+    border-radius: var(--ks-border-radius-card),
+    shadow_hover: var(--ks-box-shadow-card-hover),
+  ),
+) !default;
+
+$topic: (
+  '.c-teaser': (
+    font: var(--ks-font-display-m),
+    font-weight: var(--ks-font-weight-bold),
+    color: var(--ks-text-color-default),
+  ),
+) !default;
+
+$copy: (
+  '.c-teaser': (
     spacing: 0.5rem,
+    font: var(--ks-font-copy-m),
+    color: var(--ks-text-color-default),
   ),
 ) !default;
