--- a/packages/components/base/source/teaser/teaser.scss
+++ b/packages/components/base/source/teaser/teaser.scss
@@ -7,13 +7,11 @@ $vars: meta.module-variables(teaser-vars);
 
 .c-teaser {
   box-sizing: border-box;
-  color: var(--c-teaser--color);
   background: var(--c-teaser--background);
   border: var(--c-teaser--border);
   border-radius: var(--c-teaser--border-radius);
   box-shadow: var(--c-teaser--shadow);
   overflow: hidden;
-  font: var(--c-teaser--font);
   width: 100%;
 
   .c-rich-text {
@@ -38,14 +36,20 @@ $vars: meta.module-variables(teaser-vars);
     flex: 1 auto;
 
     > * + * {
-      margin-top: var(--c-teaser_text--spacing);
+      margin-top: var(--c-teaser_copy--spacing);
     }
   }
 
+  &__copy {
+    font: var(--c-teaser_copy--font);
+    font-weight: var(--c-teaser_copy--font-weight);
+    color: var(--c-teaser_copy--color);
+  }
+
   &__topic {
-    font: var(--g-topic--font);
-    font-weight: var(--g-topic--font-weight);
-    color: var(--g-topic--color);
+    font: var(--c-teaser_topic--font);
+    font-weight: var(--c-teaser_topic--font-weight);
+    color: var(--c-teaser_topic--color);
     margin: 0;
 
     .c-teaser--style-dark & {
