--- a/packages/components/base/source/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/teaser/_teaser-vars.scss
@@ -2,13 +2,13 @@ $name-: 'c-teaser' !default;
 
 $host: (
   '.c-teaser': (
-    background: var(--ks-color-fg-alpha-8),
+    background: var(--ks-background-color-card-interactive),
     border: var(--ks-border-width-default) solid
       var(--ks-border-color-interface),
     border-radius: var(--ks-border-radius-card),
     shadow: null,
     shadow-hover: var(--ks-box-shadow-card-hover),
-    padding: 1rem,
+    padding: 1em,
   ),
   '[ks-inverted=true] .c-teaser, [ks-inverted=true].c-teaser': (
     border: null,
@@ -32,6 +32,12 @@ $background: (
   ),
 ) !default;
 
+$body: (
+  '.c-teaser': (
+    gap: 1em,
+  ),
+) !default;
+
 $topic: (
   '.c-teaser': (
     font: var(--ks-font-display-m),
@@ -42,8 +48,9 @@ $topic: (
 
 $copy: (
   '.c-teaser': (
-    spacing: 0.5rem,
     font: var(--ks-font-copy-m),
+    font-weight: var(--ks-font-weight-regular),
     color: var(--ks-text-color-default),
+    spacing: 0.5em,
   ),
 ) !default;
